woost/views/resources/styles/blocks-EditBlocksView.css
.EditBlocksView .EditBlocksSlotList .slot_header {
    font-size: 0.8em;
    color: #444;
}

.EditBlocksView .EditBlocksSlotList .slot_blocks {
    position: relative;
    padding: 1em;
    border: 1px dashed #888;
    background-color: white;
}

.EditBlocksView > .body > .toolbar .close_action {
    float: right;
}

.EditBlocksView .EditBlocksSlotList .slot_blocks .BlockDisplay + .slot_toolbar {
    margin-top: 1em;
}

.EditBlocksView .EditBlocksSlotList .slot_blocks .slot_toolbar form {
    display: inline-block;
}

.EditBlocksView .EditBlocksSlotList .slot_blocks .slot_toolbar button {
    font-size: 0.8em;
    background: none;
    border: none;
    box-shadow: none;
    padding: 0;
    cursor: pointer;
    text-align: left;
    display: inline-block;
}

.EditBlocksView .EditBlocksSlotList .slot_blocks .slot_toolbar button img {
    position: relative;
    top: 0.2em;
}

.EditBlocksView .EditBlocksSlotList .slot_blocks .slot_toolbar > * + * {
    margin-left: 0.5em;
}

/* Block picker dialog
-----------------------------------------------------------------------------*/
.block_picker_dialog {
    padding: 1em;
}

.EditBlocksSlotList-block_picker_dialog {
    width: auto;
    height: auto;
}

.block_picker_dialog .new_blocks_panel,
.block_picker_dialog .common_blocks_panel {
    display: inline-block;
    max-height: 24em;
    overflow: auto;
    vertical-align: top;
}

.block_picker_dialog.with_common_blocks .new_blocks_panel {
    padding-right: 1em;
    border-right: 1px dotted #ccc;
}

.block_picker_dialog .common_blocks_panel {
    padding-left: 1em;
}

.block_picker_dialog .panel_header {
    font-weight: bold;
    font-size: 0.8em;
    margin-bottom: 0.8em;
}

.block_picker_dialog form {
    margin: 0;
    padding: 0;
}


.block_picker_dialog .new_blocks_panel button,
.block_picker_dialog .common_blocks_panel button {
    display: inline-block;
    text-align: left;
    background: none;
    box-shadow: none;
    border: none;
    padding: 0;
    margin: 0;
    cursor: pointer;
}

.block_picker_dialog .new_blocks_panel .new_blocks_palette .promoted_entries {
    margin-bottom: 0.5em;
}

.block_picker_dialog .new_blocks_panel .new_blocks_palette .promoted_entries .type_label {
    position: relative;
    top: -0.8em;
}

.block_picker_dialog .new_blocks_panel .new_blocks_palette.with_promoted_entries .regular_entries .palette_entry {
    margin-left: 1.2em;
}

.block_picker_dialog .new_blocks_panel .new_blocks_palette .regular_entries .type_label {
    font-size: 0.9em;
}

.block_picker_dialog .common_blocks_panel .common_block_entry + .common_block_entry {
    margin-top: 0.3em;
}

.block_picker_dialog .common_blocks_panel .ItemLabel {
    font-size: 0.9em;
}

.block_picker_dialog .common_blocks_panel .ItemLabel img {
    position: relative;
    top: 0.2em;
    margin-right: 0.4em;
}

.block_picker_dialog .dialog_buttons {
    margin-top: 1em;
    text-align: right;
}

/* BlockDisplay
-----------------------------------------------------------------------------*/
.EditBlocksView .BlockDisplay {
    position: relative;
    border: 1px solid #aaa;
    border-radius: 0.3em;
    padding: 0.4em;
    background-color: #ddd;
    box-shadow: 0 2px 3px #ccc;
    -moz-user-select: none;
    -khtml-user-select: none;
    -webkit-user-select: none;
    user-select: none;
    cursor: move;
}

.EditBlocksView .BlockDisplay + .BlockDisplay {
    margin-top: 1em;
}

.EditBlocksView .BlockDisplay > .status_labels {
    position: absolute;
    right: 0.5em;
    top: 0.5em;
}

.EditBlocksView .BlockDisplay > .status_labels .status_label {
    cursor: default;
}

.EditBlocksView .BlockDisplay > .status_labels .status_label + .status_label {
    margin-left: 0.8em;
}

.EditBlocksView .BlockDisplay > .status_labels .status_label .label {
    position: relative;
    top: -0.3em;
    font-size: 0.8em;
    font-style: italic;
    color: #444;
}

.EditBlocksView .BlockDisplay .block_handle > .button > .label {
    font-size: 0.9em;
}

.EditBlocksView .BlockDisplay .block_handle > .button > .label > * {
    vertical-align: middle;
}

.EditBlocksView .BlockDisplay .slot_header {
    font-size: 0.7em;
    margin-top: 1.2em;
    margin-bottom: 0.4em;
}

.EditBlocksView .BlockDisplay .block_handle .panel {
    width: 15em;    
}

.EditBlocksView .BlockDisplay .block_menu button {
    display: block;
    box-sizing: border-box;
    width: 100%;
    text-align: left;
    background: none;
    box-shadow: none;
    border: none;
    padding: 0.4em 0.5em;
    margin: 0;
    cursor: pointer;
    font-size: 0.75em;
}

.EditBlocksView .BlockDisplay .block_menu button img {
    position: relative;
    top: 0.2em;
    margin-right: 0.2em;
}

.EditBlocksView .BlockDisplay .block_menu button:hover {
    background-color: #ddd;
}

.EditBlocksView .BlockDisplay .block_menu button:focus {
    border: 1px dotted #bbb;
    outline: none;
}

.EditBlocksView .BlockDisplay .content_preview {
    margin-top: 0.5em;
}

.EditBlocksView .BlockDisplay .content_preview:empty {
    display: none;
}

.EditBlocksView .BlockDisplay.cut,
.EditBlocksView .BlockDisplay.drag {
    opacity: 0.7;
}

/* TextBlockDisplay
-----------------------------------------------------------------------------*/ 
.EditBlocksView .TextBlockDisplay .content_preview {
    display: table-row;
    border-spacing: 0.5em;
}

.EditBlocksView .TextBlockDisplay .translation_preview {
    display: table-cell;
    vertical-align: top;
    padding: 0.5em;
    border: 1px solid #bbb;
    border-radius: 0.3em;
    background-color: #e8e8e8;
}

.EditBlocksView .TextBlockDisplay .translation_content {
    min-height: 3.5em;
    max-height: 12em;
    min-width: 15em;
    overflow: auto;
}

.EditBlocksView .TextBlockDisplay .translation_label {
    font-size: 0.7em;
    font-weight: bold;
    color: #444;
    margin-bottom: 0.4em;
}

.EditBlocksView .TextBlockDisplay .translation_content {
    font-size: 0.8em;
}

.EditBlocksView .TextBlockDisplay .translation_content p:first-child {
    margin-top: 0;
}

.EditBlocksView .TextBlockDisplay .translation_content p:last-child {
    margin-bottom: 0;
}

.EditBlocksView .TextBlockDisplay .image_gallery {
    vertical-align: top;
    display: table-cell;
    padding-left: 1em;
    min-width: 14em;
}

.EditBlocksView .TextBlockDisplay .image_gallery li {
    float: none;
    display: inline-block;
    margin: 0;
}

.EditBlocksView .TextBlockDisplay .image_gallery li + li {
    margin-left: 1em;
}

.EditBlocksView .TextBlockDisplay .image_gallery img {
    box-shadow: 0 2px 2px #bbb;
}

.EditBlocksView .insertion_marker {
    outline: 0.1em solid #44ddff;
    margin-top: 0.5em;
    margin-bottom: 1em;
}

.EditBlocksView .insertion_marker:first-child {
    margin: 0;
    position: relative;
    top: -0.5em;
}

